# SZTU-Course-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  example_courses.json
src/sztu_course_agent/: __init__.py  agent.py  cli.py  model_config.py
src/sztu_course_agent/core/: __init__.py  conflict_detector.py  csp_solver.py  time_slot_parser.py
src/sztu_course_agent/models/: __init__.py  course.py  schedule.py  solution.py  user_preference.py
src/sztu_course_agent/tools/: __init__.py  course_loader.py  schedule_builder.py  solution_exporter.py
tests/: test_conflict_adjustment.py  test_conflict_detector.py  test_csp_solver.py  test_optimized_selection.py  test_time_slot_parser.py
